<resources>
    <string name="app_name">PartyCenter</string>

    <string name="bar_main">主页</string>
    <string name="bar_around">附近</string>
    <string name="bar_user">个人</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_first_item">退出登录</string>
    <string name="menu_second_item">退出系统</string>
    <string name="party_location">四川省成都市，青羊区，灯笼街，102号</string>
    <string name="party_time">2017年1月1日 10:00</string>
    <string name="party_type">演唱会</string>
    <string name="party_publisher">今夕何夕</string>
    <string name="party_host">电子科技大学动漫社</string>
    <string name="user_name">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="remember_account">记住账号密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确认密码</string>
    <string name="menu_first_add">登录</string>
</resources>
